fixing odd alignment of route-name in print

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -56,8 +56,7 @@ button.small { font-size: 80%; padding-top: 0; padding-bottom: 0; }
 	}
 	.fed_logo img{
 		height: 60px;
-		margin-top: 10px;
-		margin-bottom: 10px;
+		margin: 10px;
 	}
 	#ranking-result-index_route_name,#ranking-result-index_comp_date {
 		font-size: 120%;
@@ -66,8 +65,7 @@ button.small { font-size: 80%; padding-top: 0; padding-bottom: 0; }
 
 	#ranking-result-index_comp_date {
 		font-weight: normal;
-		padding-top: 10px;
-		margin-left: 10px;
+		padding: 10px;
 	}
 
 	#ranking-result-index_comp_logo {
